--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
 
 			c.addEventListener('click', function(e)
 			{
-				location.href="./welcome.html";
+				location.href="./README.md";
 			}, false);
 
-			//È«ÆÁÏÔÊ¾
+			//ç• å¾³ï¿½å¹£
 			c.height = window.innerHeight;
 			c.width = window.innerWidth;
 
-			var txts = "052¤¢7B8¤¤ËÎSONG¹ãGUANGQIÆæ¤¦1¤¨9¤ªËÎ¤«¤­¹ã¤¯¤±¤³ÆæEFCADGËÎHIJK¹ãLMNOÆæPQRSTUËÎVWXYZE¹ãFCADGHÆæIJKLM";
+			var txts = "052ã‚7B8ã„åœSONGé´»GUANGQIè¬ã†1ãˆ9ãŠåœã‹ãé´»ãã‘ã“è¬EFCADGåœHIJKé´»LMNOè¬PQRSTUåœVWXYZEé´»FCADGHè¬IJKLM";
 			txts = txts.split("");
 
 			var font_size = 28;
 			var columns = c.width/font_size;
 
-			//Ã¿ĞĞÒªÊä³öÊı×é
+			//è€½ä½©å‹£è£œç«ƒæ–¹æ€
 			var drops = [];
 
 			for(var x = 0; x < columns; x++)
 				drops[x] = 1;
 
-			//×Ö·ûËæ»úÑÕÉ«
+			//å¿–æ†²æ˜§å­—å†²å¼¼
 			var wh_color = new Array();
 			wh_color[0]="#57CE13";
 			wh_color[1]="#50BF7F";
 			wh_color[2]="#50BF7F";
 
-			//»æ³ö×Ö·û
+			//ç´™ç«ƒå¿–æ†²
 			function draw()
 			{
-				//ºÚÉ«±³¾°£¬°ëÍ¸Ã÷ÏÔÊ¾
+				//èœå¼¼å˜˜å°šï¿½ç£¯é‚‘è‹§ï¿½å¹£
 				ctx.fillStyle = "rgba(0, 0, 0, 0.09)";
 				ctx.fillRect(0, 0, c.width, c.height);
 
@@ -66,10 +66,10 @@
 				ctx.fillStyle = wh_color[parseInt(Math.random()*100+1)%3];
 				ctx.font = font_size + "px arial";
 
-				//dropsÑ­»·
+				//dropså„‰æ¡Ÿ
 				for(var i = 0; i < drops.length; i++)
 				{
-					//Ëæ»ú´òÓ¡×Ö·û
+					//æ˜§å­—å¬‰å’«å¿–æ†²
 					var text = txts[Math.floor(Math.random()*txts.length)];
 
 					//x = i*font_size
@@ -79,7 +79,7 @@
 					if(drops[i]*font_size > c.height || Math.random() > 0.95)
 						drops[i] = 0;
 
-					//Y×ø±êÔö¼Ó
+					//Yæ«ç‚å¥ç´—
 					drops[i]++;
 				}
 			}
